<resources>
    <string name="app_name" translatable="false">Schedule X</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="login">LOGIN</string>
    <string name="et_hint_password">Your Password</string>
    <string name="skip">SKIP</string>
    <string name="et_hint_account">Your Account</string>
    <string name="tv_login_title">Hey, Join us!</string>
    <string name="param_empty">Empty Input!</string>
    <string name="warning">Warning</string>
    <string name="ready_to_login_tust">Ready to login TUST……</string>
    <string name="ready_to_get_schedule_list">ready to get schedule list,may take half a minute……</string>
    <string name="login_fail">login fail,please try again later!</string>
    <string name="handle_success">processed successfully</string>
    <string name="get_fail">get failed, please try again later!</string>
    <string name="named_schedule">give a name to the first schedule！</string>
    <string name="data_fetch_subtitle">please choose how to get the data</string>
    <string name="login_tust">login tust</string>
    <string name="import_json">import json</string>
    <string name="import_excel">import excel</string>
    <string name="scan_qrcode">scan QRCode</string>
    <string name="from_other">from other</string>
    <string name="arg_exception">parameter exception, please exit and try again</string>
    <string name="add_course">Add</string>
    <string name="unknown">UnKnown</string>
    <string name="score_2_0">%s Score</string>
    <string name="schedules">Schedules</string>
    <string name="schedule_config_subtitle">Click to switch the schedule, \nlong press to edit the schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="theme">Theme</string>
    <string name="theme_list_subtitle">include schedule background \nand course item random color</string>
    <string name="week">Week.%s</string>
    <string name="config">Config</string>
    <string name="config_schedule_subtitle">You can configure your \nschedule properties</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="delete_schedule_dialog_msg">Are you sure you want to delete this schedule?\nAll course information will be lost, please exercise caution!</string>
    <string name="delete_course_dialog_msg">Are you sure you want to delete this course?\nplease exercise caution!</string>
    <string name="btn_ok">@android:string/ok</string>
    <string name="btn_cancel">@android:string/cancel</string>
    <string name="schedule_is_delete">Schedule has been deleted!</string>
    <string name="course_is_delete">Course has been deleted!</string>
    <string name="open_source_license" translatable="false">
        本应用的诞生离不开下面的开源库的支持，感谢！\n\n
        架构：Jetpack framework\n
        https://developer.android.google.cn/jetpack/\n\n
        网络：Retrofit\n
        https://github.com/square/retrofit\n\n
        网络：Okhttp3\n
        https://github.com/square/okhttp\n\n
        Json解析：Gson\n
        https://github.com/google/gson\n\n
        图像：Glide\n
        https://github.com/bumptech/glide\n\n
        Rx：Rxjava\n
        https://github.com/ReactiveX/RxJava\n\n
        权限：Rxpermissions\n
        https://github.com/tbruyelle/RxPermissions\n\n
        捐助：AndroidDonate\n
        https://github.com/didikee/AndroidDonate\n\n
        引导库：MaterialIntroView\n
        https://github.com/xiangzhihong/MaterialIntroView-master\n\n
        课程解析：CourseAdapter\n
        https://github.com/YZune/CourseAdapter\n\n
    </string>
    <string name="week_info">Week Info</string>
    <string name="background">Background</string>
    <string name="palette_color">Text color compatible</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="total_week">Total %s Week</string>
    <string name="current_week">Current Week : %s</string>
    <string name="add_your_custom_course">add your custom course</string>
    <string name="save">Save</string>
    <string name="course_name">Course Name</string>
    <string name="course_name_subtitle">Please enter the course name</string>
    <string name="position">Position</string>
    <string name="permission_is_denied">Permission denied！</string>
    <string name="update_success">update completed!</string>
    <string name="pic_choose_fail">Image selection failed!</string>
    <string name="choose_schedule_background">Select the schedule background,long press to reset</string>
    <string name="star_on_github">Star On Github</string>
    <string name="donate_me_with_alipay">Donate Me With Alipay</string>
    <string name="qq_copy">QQ number has been copied to the clipboard</string>
    <string name="developers">Developers</string>
    <string name="developer_subtitle"><![CDATA[Android & UI By Surine]]></string>
    <string name="materials">Materials</string>
    <string name="material_subtitle"><![CDATA[Icon from Iconfont,\nillustration from unDraw]]></string>
    <string name="no_coolapk">CoolApk is not installed！</string>
    <string name="osl">Open Source License</string>
    <string name="version_slogan" translatable="false">v%s Build On JetPack</string>
    <string name="please_input_content">Please enter content</string>
    <string name="course_plan">Course Plan</string>
    <string name="class_time">Please select a class time</string>
    <string name="course_position">Please enter your class location</string>
    <string name="overlimit">Exceeded section limit (Max = 12)</string>
    <string name="course_null">Course information is empty, please fill in again</string>
    <string name="teacher">Teacher</string>
    <string name="please_input_teacher">Please enter teacher name</string>
    <string name="score">Score</string>
    <string name="please_enter_course_credits">Please enter course credits</string>
    <string name="weekday">Week: %s</string>
    <string name="session">Session</string>
    <string name="choose_session">Start Session</string>
    <string name="cotinue_session">Continue Session</string>
    <string name="param_is_illgal">Illegal parameter</string>
    <string name="qq_group">QQ Group</string>
    <string name="coolapk_follow">Click to follow me</string>
    <string name="coolapk_id">CoolApk ID</string>
    <string name="qq">Click to copy QQ: 635622188</string>
    <string name="get_course_fail">Failed to get course information, please exit and try again!</string>
    <string name="snack_course_edit">You haven\'t saved yet. Are you sure you want to exit?</string>
    <string name="import_course_data">Import Course Data</string>
    <string name="import_course_data_subtitle">Click here to re-import course data</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="please_select_a_data_export_method">Please select a data export method</string>
    <string name="export_ics">Export ICS</string>
    <string name="export_excel">Export Excel</string>
    <string name="my_qrcode">My QRCode</string>
    <string name="export_json">Export Json</string>
    <string name="parse_fail">Parsing failed, please select a course file</string>
    <string name="first_toast">Swipe left or right on the main interface or click on the week display text to quickly switch the week.</string>
    <string name="white_txt">White text</string>
    <string name="black_txt">Black text</string>
    <string name="ready_to_fetch_course">getting class schedule……</string>
    <string name="fetch_fail_please_retry">Get failed, please try again!</string>
    <string name="import_super_class">import 3rd app data</string>
    <string name="ready_to_login_super_class">Ready to login Super.cn……</string>
    <string name="login_super_cn">Login Super.cn</string>
    <string name="how_to_fetch_super_data">How to get data using super.cn?</string>
    <string name="Super_Account">Super.cn Account</string>
    <string name="Super_Password">Super.cn Password</string>
    <string name="super_tip">"1. Log in with your super.cn app account to get the most recent semester timetable; \n2. Click to select the timetable you want to import and it will be successfully imported. If there is no data in this timetable, the imported data will also be empty. \n\n Note: If you do not have a super.cn account or password, you can refer to how to use the super.cn app! "</string>
    <string name="please_choose_one_term">Please select a semester schedule</string>
    <string name="login_success">login successful</string>
    <string name="year_term1">Year Term1</string>
    <string name="year_term2">Year Term2</string>
    <string name="no_permission_to_add">You do not have permission to add more timetables!</string>
    <string name="login_jw_introduce">Registration instructions</string>
    <string name="welcome_to_use">1. In this way, you can log in to the Academic Affairs Office of Tianjin University of Science and Technology to obtain class schedules,  linking to the campus network or VPN\n2. The account number is your student number, and the password is the password of the Academic Affairs Department. If the verification fails, please check if you entered it correctly!</string>
    <string name="is_show_week">Whether to show weekend</string>
    <string name="not_show_weekend">Not show weekend</string>
    <string name="not_show_timetable">Not show TimeTable</string>
    <string name="show_weekend">Show weekend</string>
    <string name="show_time">Show TimeTable</string>
    <string name="nothing_to_show">You do n’t see anything like this! o (.﹏.) o</string>
    <string name="course_card_alpha">Course Card Transparency</string>
    <string name="course_item_height">Course Item height</string>
    <string name="max_session">maximum sessions</string>
    <string name="cant_small_than_30">Not less than 30</string>
    <string name="not_cur_week">Non-current week</string>
    <string name="timetable_switched_successfully">Timetable switched successfully</string>
    <string name="timetable_info">TimeTable Info</string>
    <string name="time_table_has_been_deleted">TimeTable has been deleted!</string>
    <string name="are_you_sure_to_delete_timetable">Are you sure you want to delete this timetable? After deleting the schedule, the corresponding schedule will not show the time</string>
    <string name="is_ban_to_delete">The default timetable does not allow deletion！</string>
    <string name="app_error">System failure, please exit and try again</string>
    <string name="session_is_not_match">Timetable supports max %s, but current schedule requires %s</string>
    <string name="add_timetable">ADD TIMETABLE</string>
    <string name="choose_timetable">Choose a timetable</string>
    <string name="need_today">Time is not allowed to cross today</string>
    <string name="min">min</string>
    <string name="setting_one_session_time">Set the length of a lesson (minutes)</string>
    <string name="delete_timetable_session_note">This operation will delete this section and all subsequent sections. Please confirm the operation after selecting it correctly. If you make a mistake, please exit and abandon it directly!</string>
    <string name="delete_rule">Keep at least 6 courses</string>
    <string name="max_support">Supports up to %s sections</string>
    <string name="time_rule">This class must not be earlier than the last class</string>
    <string name="please_choose_time">Please select the class time</string>
    <string name="timetable_is_selected">Successfully selected schedule</string>
    <string name="whether_to_show_time">Whether to display the Timetable</string>
    <string name="please_select_term">请选择学期</string>
</resources>
