<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_excel"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exportExcel"
            app:layout_constraintStart_toStartOf="@+id/guideline32"
            app:layout_constraintTop_toBottomOf="@+id/exportExcel" />


        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_other"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toEndOf="@+id/other"
            app:layout_constraintStart_toStartOf="@+id/other" />

        <TextView
            android:id="@+id/scheduleTitle"
            style="@style/textview_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_name"
            app:layout_constraintStart_toStartOf="@+id/guideline32"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp2"
            android:text="@string/please_select_a_data_export_method"
            android:textSize="@dimen/t17"
            app:layout_constraintStart_toStartOf="@+id/scheduleTitle"
            app:layout_constraintTop_toBottomOf="@+id/scheduleTitle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.73" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <ImageView
            android:id="@+id/exportIcs"
            android:layout_width="@dimen/dp90"
            android:layout_height="@dimen/dp90"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@mipmap/i1"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toTopOf="@+id/guideline28" />

        <ImageView
            android:id="@+id/exportExcel"
            android:layout_width="@dimen/dp90"
            android:layout_height="@dimen/dp90"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@mipmap/i3"
            app:layout_constraintStart_toStartOf="@+id/guideline32"
            app:layout_constraintTop_toTopOf="@+id/guideline28" />

        <ImageView
            android:id="@+id/other"
            android:layout_width="@dimen/dp90"
            android:layout_height="@dimen/dp90"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@mipmap/i5"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toTopOf="@+id/guideline27" />



        <ImageView
            android:id="@+id/exportJson"
            android:layout_width="@dimen/dp90"
            android:layout_height="@dimen/dp90"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="@+id/guideline32"
            app:layout_constraintTop_toTopOf="@+id/guideline27"
            android:src="@mipmap/i1"
            />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_ics"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exportIcs"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toBottomOf="@+id/exportIcs" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/export_json"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/exportJson"
            app:layout_constraintStart_toStartOf="@+id/exportJson"
            app:layout_constraintTop_toBottomOf="@+id/exportJson" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>