<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp16"
    android:paddingTop="@dimen/dp16"
    android:paddingRight="@dimen/dp16"
    android:paddingBottom="@dimen/dp16">

    <TextView
        android:id="@+id/dialog_title"
        style="@style/textview_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_session"
        app:layout_constraintBottom_toTopOf="@+id/guideline37"
        app:layout_constraintStart_toStartOf="@+id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline20" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="@dimen/dp25"
        app:chipSpacingVertical="@dimen/dp10"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline19"
        app:layout_constraintTop_toTopOf="@+id/guideline38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="起始节次"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toStartOf="@+id/number_picker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline18"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cotinue_session"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toStartOf="@+id/numberPicker2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/number_picker"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />

    <NumberPicker
        android:id="@+id/numberPicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline38"
        app:layout_constraintEnd_toEndOf="@id/guideline19"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/guideline37" />
</androidx.constraintlayout.widget.ConstraintLayout>