<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="cn.surine.schedulex.ui.schedule_list.ScheduleListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        tools:context=".ui.schedule_list.ScheduleListFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05109489" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <TextView
            android:id="@+id/textView17"
            style="@style/textview_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/schedules"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="@+id/guideline23" />

        <TextView
            android:id="@+id/version_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/t2"
            android:text="@string/schedule_config_subtitle"
            android:textAlignment="viewStart"
            android:textSize="@dimen/t18"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:layout_constraintVertical_bias="0.38" />

        <Button
            android:id="@+id/addSchedule"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:drawableLeft="@drawable/ic_add_black_24dp"
            android:paddingStart="@dimen/dp10"
            android:paddingEnd="@dimen/dp10"
            android:text="@string/add_schedule"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toStartOf="@+id/guideline22"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/viewRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="@dimen/dp2"
            android:paddingStart="@dimen/dp20"
            android:paddingEnd="@dimen/dp20"
            android:overScrollMode="never"
            android:background="@drawable/top_left_right_radius_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>